kubernetes/gabernetes/apps/gitea/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
      name: public
  hostnames:
    - ${app_url}
  rules:
    - backendRefs:
        - kind: Service
          name: gitea-http
          port: 3000
