kubernetes/gabernetes/apps/gitea/app/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: gitea-no-geoblock
  namespace: gitea
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: gitea
  authorization:
    defaultAction: Allow
